Fixed gallery spacing

--- a/_sass/_includes/_gallery.scss
+++ b/_sass/_includes/_gallery.scss
@@ -94,14 +94,14 @@
 .gallery--grid {
 
 	.gallery__wrap {
-		margin-left: -$grid-spacing/2;
-		margin-right: -$grid-spacing/2;
+		margin-left: -$grid-spacing/2+0px;
+		margin-right: -$grid-spacing/2+0px;
 	}
 	
 	.gallery__item {
 		float: left;
 		width: 50%;
-		padding: $grid-spacing/2;
+		padding: $grid-spacing/2+0px;
 	}
 
 	.gallery__item__link {
